# okh-scraper

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  docker.yml  release.yml
src/: cli.rs  files_finder.rs  lib.rs  main.rs  settings.rs  stream_test.rs  structured_content.rs  tools.rs
src/model/: hosting_category.rs  hosting_provider_id.rs  hosting_type.rs  hosting_unit_id.rs  mod.rs  platform.rs  project.rs
src/scrapers/: appropedia.rs  manifests_repo.rs  mod.rs  oshwa.rs  thingiverse.rs  thingiverse_model.rs  thingiverse_store.rs
src/scrapers/appropedia/: mod.rs  model.rs
src/scrapers/manifests_list/: mod.rs  model.rs
src/scrapers/oshwa/: mod.rs  model.rs
src/scrapers/thingiverse/: mod.rs  model.rs  store.rs
tests/: cli.rs  cli_api.rs
