# SPDX-FileCopyrightText: 2021 - 2025 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "okh-scraper"
version = "2.4.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """A scraper of Open Source Hardware (OSH) projects.
based on the Open Know-How (OKH) standard."""
repository = "https://github.com/iop-alliance/okh-scraper"
homepage = "https://github.com/iop-alliance/okh-scraper"
keywords = ["scraper", "open-source-hardware", "open-know-how"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
edition = "2021"
# [features]
# # This requires unsafe code
# flush_to_env = [] # feature has no explicit dependencies

[lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }
dead_code = "allow"
unused = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
# indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
indexing_slicing = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
result_large_err = "allow"

[dependencies]
async-std = "1.13"
async-stream = "0.3"
async-trait = "0.1"
async-walkdir = "2.1"
asyncgit = { version = "0.27", default-features = false, features = [ "vendor-openssl" ] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
cli_utils = { version = "0.10", features = ["logging"], package = "cli_utils_hoijui" }
config = "0.15"
const_format = "0.2"
crossbeam-channel = "0.5"
# csv = "1.3"
csv-async = "1.3"
fs4 = { version = "0.13", features = ["async-std", "fs-err3"] }
# dotenvy = "0.15"
# env_logger = { version = "0.11", default-features = true }
futures = "0.3"
# futures-util = "0.3"
git-version = "0.3"
git2 = { version = "0.20", default-features = false, features = [ "https", "vendored-libgit2", "vendored-openssl" ] }
governor = "0.10"
# log = "0.4"
rand = "0.9"
# regex = "1.10"
regex = { version = "1.11", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
typed-builder = "0.21"
url = "2.5"
urlencoding = "2.1"

# [dev-dependencies]
# assert_cmd = "2.0"
# predicates = "3.0"
# tempfile = "3.8"
